--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,5 +1,4 @@
 html{ overflow-y: scroll; }
-
 html, body{ height: 100%; }
 
 .nav-bar{
@@ -33,58 +32,40 @@ html, body{ height: 100%; }
 
   }
 }
+body{ background-color: #38f; }
 
-.projectContainer{
-  color: white;
-  cursor: pointer;
-
-  // display: flex;
-  // align-items: center;
+html, body, #app { height: 100%;}
+.projects-index{
   overflow: hidden;
-  z-index: 1;
+  position: relative;
+	min-height:100%;
 
-  *{
-    pointer-events: none;
+  .projectsGrid{
+    width:100%;
+    height:100%;
   }
 
-  .circle{
-    width: 200px;
-    height: 200px;
-    background-color: #333;
-    border-radius: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
+  .item {
     z-index: 1;
-
-  }
-  .white-bg{
-    background-color: #fff;
-    position: absolute;
-  }
-  .thumbnail {
-
   }
 
-  .thumbnailContainer{
-    position: absolute;
-    z-index:2;
-    cursor: pointer;
-  }
-
-  .thumbnail.show{
-    cursor: default;
-  }
-
+	.thumbnail {
+		width: 100%;
+		background-color: #fff;
+	}
 }
 
+.circle{
+  width: 300px;
+  height: 300px;
+  background-color: #333;
+  border-radius: 100%;
+  position: absolute;
+  top: 9999px;
+  left: 0;
+  z-index: 99;
+}
 
-.row-no-gutter{
-  margin-right: 0;
-  margin-left: 0;
-
-  [class*="col-"] {
-    padding-right: 0;
-    padding-left: 0;
-  }
+.content{
+	color: white;
 }
