--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,7 +6,7 @@ html, body{ height: 100%; }
   height: 64px;
   display: flex;
   align-items: center;
-  z-index:1000;
+  z-index:1;
   width:100%;
   padding: 0 32px;
 
@@ -45,10 +45,6 @@ html, body, #app { height: 100%;}
     height:100%;
   }
 
-  .item {
-    z-index: 1;
-  }
-
 	.thumbnail {
 		width: 100%;
 		background-color: #fff;
@@ -61,11 +57,47 @@ html, body, #app { height: 100%;}
   background-color: #333;
   border-radius: 100%;
   position: absolute;
-  top: 9999px;
-  left: 0;
-  z-index: 99;
+  top: 0px;
+  left: -9999px;
 }
 
-.content{
-	color: white;
+.active{
+  z-index:100;
+}
+
+.project.container{
+  top: 200px;
+  position: relative;
+
+  .imageHolder{
+    overflow:hidden;
+    position: relative;
+    height: 400px;
+    width: 100%;
+    z-index:100;
+
+    img{
+      position: absolute;
+      margin: auto;
+      width:100%;
+      min-height: 100%;
+      left: -1000%;
+      right: -1000%;
+      top: -1000%;
+      bottom: -1000%;
+    }
+  }
+
+  .content{
+    display: block;
+    background-color: white;
+    overflow:hidden;
+    min-height: 0;
+    z-index: 99;
+    // margin-top: 450px;
+  }
+}
+.row.no-gutters > [class*="col-"] {
+  padding-right: 0;
+  padding-left: 0;
 }
