--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -6,7 +6,7 @@ html, body{ height: 100%; }
   height: 64px;
   display: flex;
   align-items: center;
-  z-index:1;
+  z-index:10;
   width:100%;
   padding: 0 32px;
 
@@ -26,10 +26,15 @@ html, body{ height: 100%; }
   min-height: 50vh;
   color: #fff;
   overflow: hidden;
+  background-image: url("../../assets/images/hero_bg.jpg");
+  text-align: center;
+  display: flex;
+  align-items: center;
 
-  img{
-    min-width: 100%;
-
+  p{
+    font-size: 24px;
+    font-weight: 300;
+    line-height: 1.25;
   }
 }
 body{ background-color: #38f; }
@@ -51,6 +56,34 @@ html, body, #app { height: 100%;}
 	}
 }
 
+.skrim{
+  background-color: black;
+  opacity: .9;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index:100;
+  vertical-align: middle;
+}
+
+.video{
+  position: absolute;
+  min-width: 100%;
+  top: 0;
+  left: 0;
+  z-index: 11;
+
+  .back{
+    cursor: pointer;
+  }
+  iframe{
+    width:100%;
+    height:100%;
+  }
+}
+
 .circle{
   width: 300px;
   height: 300px;
@@ -63,6 +96,27 @@ html, body, #app { height: 100%;}
 
 .active{
   z-index:100;
+}
+
+.backgroundImage{
+  position: fixed;
+  min-height: 100%;
+  z-index: -1;
+}
+
+.imageHolder{
+  overflow:hidden;
+  height: 100%;
+  position: fixed;
+
+  img{
+    margin: auto;
+    min-height: 100%;
+    left: -1000%;
+    right: -1000%;
+    top: -1000%;
+    bottom: -1000%;
+  }
 }
 
 .project.container{
