--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,6 +1,5 @@
 @import "_custom-variables";
 
-
 // html{ overflow-y: scroll; }
 body.noscroll{
   position: fixed;
@@ -11,6 +10,46 @@ body{
   overflow-y: scroll
 }
 html, body{ height: 100%; }
+
+ul{
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+
+}
+
+h2{
+  font-family: Montserrat-Regular;
+  font-size: 45px;
+  color: #4D6280;
+  letter-spacing: -2.46px;
+  line-height: 48px;
+}
+
+h4 {
+  font-family: 'Montserrat';
+  font-weight:500;
+  color: #4D6280;
+  font-size: 22px;
+  line-height: 40px;
+}
+
+.copy{
+  font-family: Roboto-Thin;
+  font-size: 22px;
+  color: #738599;
+  letter-spacing: -0.41px;
+  line-height: 32px;
+}
+
+
+
+
+
+
+
+
+
 
 .nav-bar{
   position: absolute;
@@ -41,19 +80,23 @@ html, body{ height: 100%; }
 }
 
 .hero{
-  background-color: #4E80DE;
   max-height: 560px;
-  min-height: 50vh;
+  min-height: 560px;
   color: #fff;
   overflow: hidden;
-  background-image: url("../../assets/images/hero_bg.jpg");
-  text-align: center;
+  background: #5f3cbc; /* Old browsers */
+  background: -moz-linear-gradient(-45deg, #5f3cbc 0%, #3594f8 100%); /* FF3.6-15 */
+  background: -webkit-linear-gradient(-45deg, #5f3cbc 0%,#3594f8 100%); /* Chrome10-25,Safari5.1-6 */
+  background: linear-gradient(135deg, #5f3cbc 0%,#3594f8 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f3cbc', endColorstr='#3594f8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   display: flex;
   align-items: center;
+  // padding: 0 64px;
 
   p{
-    font-size: 24px;
-    font-weight: 300;
+    font-family: "Montserrat";
+    font-size: 46px;
+    font-weight: 100;
     line-height: 1.25;
   }
 }
@@ -63,12 +106,6 @@ html, body, #app { height: 100%;}
 .projects-index{
   overflow: hidden;
   position: relative;
-	min-height:100%;
-
-  .projectsGrid{
-    width:100%;
-    height:100%;
-  }
 
 	.thumbnail {
 		width: 100%;
@@ -149,7 +186,7 @@ html, body, #app { height: 100%;}
 }
 
 .project.container{
-  top: 256px;
+  top: 408px;
   position: relative;
 
   .header{
@@ -157,7 +194,6 @@ html, body, #app { height: 100%;}
     background-color: white;
     width: 100%;
     position: absolute;
-    padding-top: 128px;
 
     .title{
       font-size: 48px;
@@ -196,14 +232,16 @@ html, body, #app { height: 100%;}
   .content{
     display: block;
     background-color: white;
-    //overflow:hidden;
     min-height: 0;
     z-index: 99;
-    // padding-top: 64px;
-    // margin-top: 450px;
+
     .section{
-      margin-top: 80px;
-      margin-bottom: 80px;
+      padding: 32px 48px;
+    }
+
+    video{
+      width: 100%;
+      margin-bottom: 40px;
     }
 
     .bigTitle{
@@ -248,9 +286,6 @@ html, body, #app { height: 100%;}
   height: 100px;
   width: 100%;
   position:absolute;
-}
-.col-sm-12{
-  padding: 0 48px;
 }
 
 .right{
