--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -54,8 +54,6 @@ h4 {
 .nav-bar{
   position: absolute;
   height: 64px;
-  display: flex;
-  align-items: center;
   z-index:100;
   width:100%;
   padding: 0px;
@@ -68,6 +66,13 @@ h4 {
     flex: 1;
   }
   .nav-links{
+    display: flex;
+    align-items: center;
+    height: 100%;
+
+    a{
+      margin-right: 20px;
+    }
   }
 }
 
@@ -231,12 +236,12 @@ html, body, #app { height: 100%;}
 
   .content{
     display: block;
-    background-color: white;
     min-height: 0;
     z-index: 99;
 
     .section{
       padding: 32px 48px;
+      background-color: #fff;
     }
 
     video{
