--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -65,13 +65,22 @@ h4 {
   .title{
     flex: 1;
   }
+
   .nav-links{
     display: flex;
     align-items: center;
     height: 100%;
 
+    .right{
+      margin-left: auto;
+    }
     a{
-      margin-right: 20px;
+      font-family: "Montserrat-thin";
+      margin-right: 32px;
+      font-weight: 100;
+      letter-spacing: 0.2em;
+      font-size: 14px;
+      text-transform: uppercase;
     }
   }
 }
@@ -99,7 +108,7 @@ h4 {
   // padding: 0 64px;
 
   p{
-    font-family: "Montserrat";
+    font-family: "Montserrat-thin";
     font-size: 46px;
     font-weight: 100;
     line-height: 1.25;
@@ -168,17 +177,17 @@ html, body, #app { height: 100%;}
 }
 
 .imageHolder{
-  overflow:hidden;
-  height: 100%;
-  position: fixed;
+  // overflow:hidden;
+  // height: 100%;
+  // position: fixed;
 
   img{
-    margin: auto;
-    min-height: 100%;
-    left: -1000%;
-    right: -1000%;
-    top: -1000%;
-    bottom: -1000%;
+    // margin: auto;
+    // min-height: 100%;
+    // left: -1000%;
+    // right: -1000%;
+    // top: -1000%;
+    // bottom: -1000%;
   }
 }
 
@@ -191,7 +200,7 @@ html, body, #app { height: 100%;}
 }
 
 .project.container{
-  top: 408px;
+  top: 256px;
   position: relative;
 
   .header{
@@ -216,28 +225,28 @@ html, body, #app { height: 100%;}
   }
 
   .imageHolder{
-    overflow:hidden;
+    // overflow:hidden;
     position: relative;
     // height: 400px;
-    width: 100%;
-    z-index:101;
+    // width: 100%;
+    // z-index:101;
 
     img{
-      position: absolute;
-      margin: auto;
-      width:100%;
-      min-height: 100%;
-      left: -1000%;
-      right: -1000%;
-      top: -1000%;
-      bottom: -1000%;
+      // position: absolute;
+      // margin: auto;
+      // width:100%;
+      // min-height: 100%;
+      // left: -1000%;
+      // right: -1000%;
+      // top: -1000%;
+      // bottom: -1000%;
     }
   }
 
   .content{
-    display: block;
-    min-height: 0;
-    z-index: 99;
+    // display: block;
+    // min-height: 0;
+    // z-index: 99;
 
     .section{
       padding: 32px 48px;
@@ -295,4 +304,8 @@ html, body, #app { height: 100%;}
 
 .right{
   text-align: right;
+}
+
+.img-fluid{
+  width: 100%;
 }
