--- a/src/assets/styles/_custom-variables.scss
+++ b/src/assets/styles/_custom-variables.scss
@@ -1,2 +1,8 @@
 $darkGrey: #3e4c5e;
 $mediumGrey: #8d969d;
+
+
+$shadow2: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
+$shadow3: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
+$shadow4: 0 14px 28px rgba(0,0,0,0.25), 0 10px 10px rgba(0,0,0,0.22);
+$shadow5: 0 19px 38px rgba(0,0,0,0.30), 0 15px 12px rgba(0,0,0,0.22);
