--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -73,12 +73,11 @@ h4 {
       margin-left: auto;
     }
     a{
-      font-family: "Montserrat-thin";
-      margin-right: 32px;
-      font-weight: 100;
-      letter-spacing: 0.2em;
-      font-size: 14px;
-      text-transform: uppercase;
+        margin-right: 32px;
+        /* font-weight: 100; */
+        letter-spacing: .05em;
+        font-size: 12px;
+        text-transform: uppercase;
     }
   }
 }
@@ -103,6 +102,7 @@ h4 {
   filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5f3cbc', endColorstr='#3594f8',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
   display: flex;
   align-items: center;
+  position: relative;
   // padding: 0 64px;
 
   p{
@@ -129,7 +129,14 @@ html, body, #app { height: 100%;}
 	.thumbnail {
 		width: 100%;
 		background-color: #fff;
+    // -webkit-filter: grayscale(1);
+    // filter: grayscale(1);
+    transition: all 0.3s;
 	}
+
+  .thumbnail:hover{
+    -webkit-filter: grayscale(0);
+  }
 }
 
 .skrim{
