--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -83,12 +83,13 @@ h4 {
   }
 }
 
+.back{
+  background-color: rgba(0,0,0,0.3);
+  padding:20px;
+}
 .nav-bar.right{
   flex-direction: row-reverse;
-  .back{
-    background-color: rgba(0,0,0,0.3);
-    padding:20px;
-  }
+
 }
 
 .hero{
@@ -127,16 +128,32 @@ html, body, #app { height: 100%;}
   overflow: hidden;
   position: relative;
 
+  .project{
+    position: relative;
+  }
+
 	.thumbnail {
 		width: 100%;
 		background-color: #fff;
-    // -webkit-filter: grayscale(1);
-    // filter: grayscale(1);
-    transition: all 0.3s;
 	}
 
-  .thumbnail:hover{
-    -webkit-filter: grayscale(0);
+  .projectOverlay{
+    background-color: rgba(60, 145, 255,0.75);
+    position: absolute;
+    width:100%;
+    height: 48px;
+    // transition: all .25s ease;
+    display: none;
+    align-items: center;
+    justify-content: center;
+    bottom:0;
+    color: #fff;
+    font-size: 16px;
+    font-family: "Montserrat";
+    text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
+  }
+  .projectThumnail:hover .projectOverlay{
+    display: flex;
   }
 }
 
@@ -166,6 +183,23 @@ html, body, #app { height: 100%;}
   iframe{
     width:100%;
     height:100%;
+  }
+}
+
+.video.reel-wrapper{
+  position: absolute;
+  z-index: 101;
+  background-color: rgba(0,0,0,0.8);
+  height: 100%;
+  .reel{
+    height :560px;
+  }
+
+  .back{
+    z-index:102;
+    position: absolute;
+    top: 0;
+    right: 0;
   }
 }
 
