--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -20,7 +20,7 @@ ul{
 }
 
 h2{
-  font-family: Montserrat-Regular;
+  font-family: 'Montserrat', sans-serif;
   font-size: 45px;
   color: #4D6280;
   letter-spacing: -2.46px;
@@ -28,7 +28,7 @@ h2{
 }
 
 h4 {
-  font-family: 'Montserrat';
+  font-family: 'Montserrat', sans-serif;
   font-weight:500;
   color: #4D6280;
   font-size: 22px;
@@ -109,7 +109,7 @@ h4 {
   // padding: 0 64px;
 
   p{
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     font-size: 46px;
     font-weight: 100;
     line-height: 1.25;
@@ -150,7 +150,7 @@ html, body, #app { height: 100%;}
     bottom:0;
     color: #fff;
     font-size: 16px;
-    font-family: "Montserrat";
+    font-family: "Montserrat", sans-serif;
     text-shadow: 0px 1px 2px rgba(0,0,0,0.5);
   }
   .projectThumnail:hover .projectOverlay{
