--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -251,6 +251,7 @@ html, body, #app { height: 100%;}
       opacity: .5;
       transition: all 0.35s;
       cursor: pointer;
+      width: 80px;
     }
 
     .pause{
