--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -247,6 +247,12 @@ html, body, #app { height: 100%;}
   position: relative;
   text-align: center;
 
+  .skrim{
+    position: absolute;
+    opacity: 0.3;
+    z-index: 99;
+  }
+
   .controls{
     position: absolute;
     z-index: 100;
@@ -259,16 +265,7 @@ html, body, #app { height: 100%;}
     width: 80px;
   }
 
-  .pause{
-    opacity: 0;
-  }
 }
-.videoPlayer:hover{
-  .pause{
-      opacity: .5
-    }
-}
-
 
 
 .projectShow{
@@ -322,14 +319,16 @@ html, body, #app { height: 100%;}
         }
       }
 
-      .copy::after{
-        content: "";
-        display: table;
-        clear: both;
-      }
+
       .img-fluid{
-        margin-bottom: 48px;
+        // margin-bottom: 48px;
       }
+    }
+
+    .section::after{
+      content: "";
+      display: table;
+      clear: both;
     }
 
     .section:last-child{
@@ -359,8 +358,6 @@ html, body, #app { height: 100%;}
     .body{ margin-top: 20px; font-size: 20px; color: $mediumGrey; line-height: 32px;}
 
     .video{
-      margin-bottom: 20px;
-
       iframe{
         position:absolute;top:0;left:0;width:100%; height:100%;
       }
