--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -140,7 +140,7 @@ html, body, #app { height: 100%;}
 	}
 
   .projectOverlay{
-    background-color: rgba(60, 145, 255,0.75);
+    background-color: rgba(90, 70, 195, 0.75);
     position: absolute;
     display: flex;
     width:100%;
